chore: fix signout on mobile

--- a/src/styles/Navbar.module.css
+++ b/src/styles/Navbar.module.css
@@ -83,7 +83,7 @@
     justify-content: space-between;
   }
 
-  .navigation li {
+  .navigation li, .signout {
     font-size: 16px;
   }
 }
@@ -105,7 +105,6 @@
     justify-content: flex-end;
   }
 
-
   .navBurger {
     display: flex;
   }
@@ -125,7 +124,15 @@
     transition: right 200ms ease-in-out;
   }
 
-  .navigation li {
+  .navigation li, .signout {
     font-size: 18px;
+  }
+
+  .user {
+    height: 3em;
+  }
+
+  .signout {
+    color: #ffffff;
   }
 }
